--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.KP"
         tools:targetApi="31">
         <activity
-            android:name=".AllTasks"
+            android:name=".activities.AllTasks"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.Authorization"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
